# Shared-Wifi

./: .gitignore  CMakeLists.txt  README.md  README.md~
doc/: 404.html  Authenticator.html  Database.html  Network.Ap.html  Network.Dhcp.html  Network.Iptables.html  Resources.html  Routes.html  SharedWifi.html  api-reference.html  configurações.html  funcionalidades.html  index.html  instalação.html  readme.html
scripts/: resources.pl
src/: CMakeLists.txt  authenticator.c  authenticator.h  main.c  post_request.c  post_request.h  resources.c  resources.h  resources.pl  routes.c  routes.h
src/conf/: dhcpd.conf  dhcpd.conf~  hostapd.conf  hostapd.conf~  interfaces  interfaces~  rc.local
src/db/: CMakeLists.txt  database.c  database.h  datetime.c  datetime.h
src/network/: CMakeLists.txt  ap.c  ap.h  dhcp.c  dhcp.h  iptables.c  iptables.h
src/web/: 404.html  CMakeLists.txt  html_reader.c  index.c  index.h  index.html  index.html~  resources.pl  teste.c  teste.h  teste.html
src/web/admin/: index.html  index.html~
src/web/css/: stylish-portfolio.css
src/web/html/: footer.html  header.html  index.html  teste.html
src/web/js/: app.js  image_loader.js
src/web/pages/: CMakeLists.txt  index.c  index.h  teste.c  teste.h
src/web/template/: CMakeLists.txt  footer.c  footer.h  header.c  header.h
